--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     repositories {
         jcenter()
         google()
+        mavenCentral()
     }
 
     dependencies {
@@ -32,6 +33,7 @@ android {
 }
 
 repositories {
+    mavenCentral()
     mavenLocal()
     google()
     jcenter()
@@ -39,12 +41,13 @@ repositories {
         // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
         url "$rootDir/../node_modules/react-native/android"
     }
+    maven() { url 'https://jitpack.io' }
 }
 
 def googlePlayServicesVersion = rootProject.hasProperty('googlePlayServicesVersion') ? rootProject.googlePlayServicesVersion : DEFAULT_GOOGLE_PLAY_SERVICES_VERSION
 
 dependencies {
     implementation "com.google.android.gms:play-services-location:$googlePlayServicesVersion"
-    api 'com.facebook.react:react-native:+'
+    implementation 'com.facebook.react:react-native:+'
 }
   
